# github-metadata-service

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
alembic/: env.py
alembic/versions/: 20260526_0001_create_repositories_table.py
app/: main.py
app/api/: dependencies.py  exception_handlers.py
app/api/v1/: repositories.py
app/core/: config.py  exceptions.py  logging.py
app/db/: base.py  session.py
app/models/: repository.py
app/repositories/: repository_repo.py
app/schemas/: github.py  repository.py
app/services/: github_client.py  repository_service.py
tests/: conftest.py
tests/integration/: test_repositories_api.py
tests/unit/: test_github_client.py  test_github_url_validation.py  test_repository_service.py
