[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "github-metadata-service"
version = "0.1.0"
description = "Async FastAPI service for fetching and storing GitHub repository metadata"
requires-python = ">=3.11"

dependencies = [
    # Web framework
    "fastapi>=0.115.0,<0.116.0",
    "uvicorn[standard]>=0.30.0,<0.31.0",

    # Database — async SQLAlchemy + asyncpg driver
    "sqlalchemy[asyncio]>=2.0.0,<3.0.0",
    "asyncpg>=0.29.0,<0.30.0",
    "alembic>=1.13.0,<2.0.0",

    # Validation and settings
    "pydantic>=2.7.0,<3.0.0",
    "pydantic-settings>=2.3.0,<3.0.0",

    # External HTTP client
    "httpx>=0.27.0,<0.28.0",

    # Structured logging
    "structlog>=24.0.0,<25.0.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0.0,<9.0.0",
    "pytest-asyncio>=0.23.0,<0.24.0",
    "pytest-cov>=5.0.0,<6.0.0",
    "httpx>=0.27.0,<0.28.0",
    "respx>=0.21.0,<0.22.0",

    # Type checking
    "mypy>=1.10.0,<2.0.0",
    "types-requests>=2.31.0",

    # Linting and formatting
    "ruff>=0.4.0,<0.5.0",
]

# ---------------------------------------------------------------------------
# Tool configuration
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-report=html"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
]

ignore = [
    "B008",
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "asyncpg.*"
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["app"]